--- a/basic_site/index.html
+++ b/basic_site/index.html
@@ -13,7 +13,7 @@
             </div>
             <div id = "info">
                 <div id = "description">
-                    Hi I'm an R / Shiny developer with experience in statistics and psychology
+                    Hi I'm an R / Shiny developer with experience in statistics and psychology. I build interactive dashboards and web applications for data analysis and visualization.
                 </div>
                 <div id = "icons">
                     <a href="#" target="https://github.com/mic-wypych"><i class="fa-brands fa-github"></i></a>
