--- a/basic_site/index.html
+++ b/basic_site/index.html
@@ -11,10 +11,13 @@
             <div id = "photo">
                 <img src="resources/photo.jpeg">
             </div>
+            <div id="spacer">
+                </div>
             <div id = "info">
                 <div id = "description">
                     Hi I'm an R / Shiny developer with experience in statistics and psychology. I build interactive dashboards and web applications for data analysis and visualization.
                 </div>
+                
                 <div id = "icons">
                     <a href="#" target="https://github.com/mic-wypych"><i class="fa-brands fa-github"></i></a>
                     <a href="#" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
