some basic animation

--- a/basic_site/index.html
+++ b/basic_site/index.html
@@ -7,6 +7,8 @@
 
     <body>
 
+        <canvas id="bg-canvas"></canvas>
+
         <div class="person_card">
             <div id = "photo">
                 <img src="resources/photo.jpeg">
